<resources>
    <string name="app_name">MeetingApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Настройки</string>
    <string name="action_add">Создать встречу</string>
    <string name="action_search">Поиск по описанию</string>
    <string name="action_exit">Выход</string>
    <string name="action_about">О приложении</string>
    <string name="description">Описание встречи</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="about">О приложении</string>
    <string name="quit">Подтверждение выхода</string>
    <string name="really_quit">Вы действительно хотите выйти?</string>
    <string name="ok">OK</string>
    <string name="aboutText">Laboratory work #3\nAuthor: Danis Ivayev\nGroup: 6122M\nUniversity: SSAU</string>
    <string name="userName">Логин: </string>
    <string name="password">Пароль:</string>
    <string name="loginTitle">Войдите в систему</string>
    <string name="loginText">Введите логин и пароль для доступа к серверу</string>
    <string name="loginSummary">Вход не произведен</string>
    <string name="descTitle">Поиск по описанию</string>
    <string name="descText">Введите описание</string>
    <string name="workInternet">Отсутствует интернет соединение</string>
    <string name="missAccount">Необходимо ввести логин и пароль от сервера. Зайдите в Меню -> Настройки-> Войдите в систему</string>
    <string name="pref_category">Настройки Аккаунта</string>
    <string name="delete_message">Встреча удалена</string>
    <string name="add_message">Встреча добавлена</string>
    <string name="participant_add_message">Участник добавлен</string>
    <string name="iconContentDescription">Icon for delete</string>
    <string name="iconListContent">Icon for list item</string>
    <string name="iconPriorityContent">Icon for priority</string>

    <string name="meetingTextView">meetingName</string>
    <string name="beginDateText">beginDate</string>
    <string name="endDateText">endDate</string>
    <string name="urlGetMeeting">http://192.168.43.246:8080/rest/rest/meeting/getMeeting</string>
    <string name="urlDeleteMeeting">http://192.168.43.246:8080/rest/rest/meeting/deleteMeeting</string>
    <string name="urlGetDescription">http://192.168.43.246:8080/rest/rest/meeting/getDescription</string>
    <string name="urlAddParticipant">http://192.168.43.246:8080/rest/rest/meeting/addParticipant</string>
    <string name="urlGetMeetOnDes">http://192.168.43.246:8080/rest/rest/meeting/getMeetOnDes</string>
    <string name="urlSetMeeting">http://192.168.43.246:8080/rest/rest/meeting/mobileSetMeeting</string>
    <string name="unauthorized">[{\"response\":\"false\"}]</string>
    <string name="jsonMeetingName">name</string>
    <string name="jsonBeginDate">beginData</string>
    <string name="jsonEndDate">endData</string>
    <string name="jsonId">id</string>
    <string name="jsonPriority">priority</string>
    <string name="jsonDescription">description</string>
    <string name="jsonPartisipant">participants</string>
    <string name="menu_add">Стать участником</string>
    <string name="menu_info">Подробно о встрече</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="post">Должность</string>
    <string name="participantText">Введите данные</string>
    <string name="participantTitle">Стать участником</string>
    <string name="textBeginData">Дата нач:</string>
    <string name="textEndDate">Дата зав.:</string>
    <string name="textBeginTime">Время нач.:</string>
    <string name="textEndTime">Время зав.:</string>
    <string name="jsonLastName">lastName</string>
    <string name="jsonFirstName">firstName</string>
    <string name="jsonPatronymic">patronymic</string>
    <string name="jsonPost">post</string>
    <string name="newMeeting">Новая встреча</string>
    <string name="metName">Название</string>
    <string name="descriptionName">Описание</string>
    <string name="partTitle">Участники:</string>
    <string name="priority">Приоритет:</string>
    <string name="pUrgent">Срочная</string>
    <string name="pPossible">По возможности</string>
    <string name="pRoutine">Плановая</string>
</resources>
