<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/listitem"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/list_background"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/iconContentDescription"
            android:src="@android:drawable/ic_menu_delete" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/mainview"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:background="#ffebeff1"
        android:orientation="horizontal"

        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/icon"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/list_icon"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="false"
                android:contentDescription="@string/iconListContent"
                android:layout_centerVertical="true"></ImageView>

            <TextView
                android:id="@+id/meetingName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_toRightOf="@+id/icon"
                android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
                android:paddingRight="?android:attr/listPreferredItemPaddingRight"
                android:text="@string/meetingTextView"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:layout_alignParentRight="false"></TextView>

            <TextView
                android:id="@+id/beginDate"
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:layout_below="@+id/meetingName"
                android:layout_gravity="center_horizontal"
                android:layout_toRightOf="@+id/icon"
                android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
                android:paddingRight="?android:attr/listPreferredItemPaddingRight"
                android:text="@string/beginDateText"
                android:textSize="16sp"></TextView>
            <TextView
                android:id="@+id/endDate"
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:layout_below="@+id/beginDate"
                android:layout_gravity="center_horizontal"
                android:layout_toRightOf="@+id/icon"
                android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
                android:paddingRight="?android:attr/listPreferredItemPaddingRight"
                android:text="@string/endDateText"
                android:textSize="16sp"></TextView>

        </RelativeLayout>


    </LinearLayout>
</RelativeLayout>