<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameText"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:layout_toRightOf="@+id/nameTextView"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/firstname"
            android:id="@+id/nameTextView"
            android:layout_gravity="center_horizontal"
            android:paddingTop="7dp"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            android:layout_alignParentRight="false" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lastname"
            android:id="@+id/lastNameTextView"
            android:paddingTop="7dp"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/lastNameText"
            android:layout_toRightOf="@+id/lastNameTextView"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
             />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/patronymic"
            android:id="@+id/patronymicTextView"
            android:paddingTop="7dp"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/patronymicText"
            android:layout_toRightOf="@+id/patronymicTextView"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
             />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/post"
            android:id="@+id/postTextView"
            android:paddingTop="7dp"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/postText"
            android:layout_toRightOf="@+id/postTextView"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            />

    </RelativeLayout>
</LinearLayout>